# ChangeLog for net-misc/gsasl
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/gsasl/ChangeLog,v 1.36 2011/01/09 17:32:48 jer Exp $

*gsasl-1.6.0 (09 Jan 2011)

  09 Jan 2011; Jeroen Roovers <jer@gentoo.org> +gsasl-1.6.0.ebuild:
  Version bump (bug #311319).

  09 Jan 2011; Jeroen Roovers <jer@gentoo.org> gsasl-1.4.1.ebuild:
  Do not run tests under valgrind (bug #346131).

  17 Feb 2010; Jeroen Roovers <jer@gentoo.org> gsasl-0.2.4.ebuild,
  gsasl-0.2.29.ebuild, gsasl-1.1.ebuild, gsasl-1.4.1.ebuild:
  Switch to new style virtuals (bug #237400).

*gsasl-1.4.1 (17 Feb 2010)

  17 Feb 2010; Jeroen Roovers <jer@gentoo.org> gsasl-1.1.ebuild,
  +gsasl-1.4.1.ebuild:
  Version bump

  (bug #300551). Have SRC_URI use mirror://gnu. Do not hardcode package name
  in SRC_URI.

  07 Jan 2010; Christian Faulhammer <fauli@gentoo.org> gsasl-1.1.ebuild:
  Transfer Prefix keywords

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> gsasl-0.2.4.ebuild:
  Remove virtual/libc

*gsasl-1.1 (25 Apr 2009)

  25 Apr 2009; Patrick Lauer <patrick@gentoo.org> +gsasl-1.1.ebuild:
  Bump to 1.1, fixes half of #263867

*gsasl-0.2.29 (29 Nov 2008)

  29 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  -gsasl-0.2.28.ebuild, +gsasl-0.2.29.ebuild:
  Version bump, bug #246507

*gsasl-0.2.28 (07 Sep 2008)

  07 Sep 2008; Tobias Scherbaum <dertobi123@gentoo.org> -gsasl-0.2.3.ebuild,
  -gsasl-0.2.10.ebuild, -gsasl-0.2.21.ebuild, -gsasl-0.2.26.ebuild,
  +gsasl-0.2.28.ebuild:
  Version bump, #236712 and cleanup

*gsasl-0.2.26 (15 Jun 2008)

  15 Jun 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  +gsasl-0.2.26.ebuild:
  Version bump (#217015), remove useless virtual/libc depend, remove static
  use flag (#165740)

  03 Feb 2008; Fabian Groffen <grobian@gentoo.org> gsasl-0.2.10.ebuild,
  gsasl-0.2.21.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*gsasl-0.2.21 (30 Sep 2007)
