@@ -7,6 +7,6 @@ EBUILD gsasl-0.2.29.ebuild 1237 RMD160 c7920e1eb3a70919b77f8a5e6733ed951b1f0dc3 
 EBUILD gsasl-0.2.4.ebuild 1116 RMD160 3685978f42e055ac5c51f326e7d2a65c77c1e53a SHA1 1a7cfd8f6fc0dded17dde1f4c3251000a2b8a99c SHA256 b1793209e29cd014dc18cffa4dd890317ddb0a3204831f46cd13b6ebf9856c84
 EBUILD gsasl-1.1.ebuild 1132 RMD160 35e136598fe76ad616ba20c001d5fe1e1b701bb7 SHA1 b220b1e9affe25d2f6589dc7e500da72cb95a6b1 SHA256 34a48e663e658a0bdc9f5c53f36d3ee5d8558fbe50580b1059c4a01ee6529661
 EBUILD gsasl-1.4.1.ebuild 1150 RMD160 998350936d4e3e0864a18327c589c012558d6273 SHA1 31cde2c60620e9b5b26858bfd83b5d74ae04da11 SHA256 f4b44d4159c771c491e1b96e9b0625ad2e1731b9abe240cbd04adad2a114159d
-EBUILD gsasl-1.6.0.ebuild 1150 RMD160 679b7a6120b4ebf3b5fb519358264715931b7396 SHA1 606f15887c8a0e630d08cafba78d39512046058e SHA256 b86e322786ca5b1088fb1b5f9fe582eec746992c38d661fa5233fa7c93954313
-MISC ChangeLog 4829 RMD160 b4e4c39e8a8fb479048b63a69f898ab0fe663ed4 SHA1 5f0b48791e6b89648312bb546d3c31126cfd4b3b SHA256 897af0e6a713a201e5c967c6e287dd3d6b1e874e6925dc74255671d61adbbd76
-MISC metadata.xml 162 RMD160 fd38b82541901b3c6df18b630d79fe7883ae3f01 SHA1 e6aecefcc2137d6047cedfe447686775ab59cb48 SHA256 569031668e39895fb20829fb17a49a91a83e8f41b2195b0f04825c4340d2af6b
+EBUILD gsasl-1.6.0.ebuild 1286 RMD160 49e3af87fe77617577450fa3ce23c8935713d5c0 SHA1 e5e43d663f241dcf29f4ff35900d63747929c773 SHA256 845be23f74dc663d7da270f7684ded1a3f18a05efa5f39e2e2080aab47cbe247
+MISC ChangeLog 4990 RMD160 499de724a47320e08d7ea722501bdbe68e8f56bc SHA1 163f0fd77a2f3302906d0daf6c75d8fb4ac1f968 SHA256 480c10add9192d30ac32ed45e8c060e3862a92843121eaf8828d986a150a49a3
+MISC metadata.xml 260 RMD160 722bc55d886d10d9f8ed69c0109be2427f19ddba SHA1 62549efa0a2488ca090c9fd3ec27eef3f434c1d9 SHA256 02111c3679e4e99a420f2f32a2cf299f0d72afd2bce09091acca0aa159655426
