@@ -1,18 +1,23 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/gsasl/gsasl-1.6.0.ebuild,v 1.1 2011/01/09 17:32:48 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/gsasl/gsasl-1.6.0.ebuild,v 1.2 2011/03/15 19:25:00 jer Exp $
 
 DESCRIPTION="The GNU SASL client, server, and library"
 HOMEPAGE="http://www.gnu.org/software/gsasl/"
 SRC_URI="mirror://gnu/${PN}/${P}.tar.gz"
 LICENSE="GPL-3"
 SLOT="0"
+KEYWORDS="~amd64 ~ia64 ~ppc ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos"
+IUSE="doc gcrypt idn kerberos nls static"
+
 # TODO: check http://www.gnu.org/software/gsasl/#dependencies for more
 # 	optional external libraries.
-KEYWORDS="~amd64 ~ia64 ~ppc ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos"
-IUSE="kerberos nls static doc"
-DEPEND="nls? ( sys-devel/gettext )
-	kerberos? ( virtual/krb5 )"
+DEPEND="
+	gcrypt? ( dev-libs/libgcrypt )
+	idn? ( net-dns/libidn )
+	kerberos? ( virtual/krb5 )
+	nls? ( sys-devel/gettext )
+"
 RDEPEND="${DEPEND}"
 
 src_compile() {
@@ -21,7 +26,9 @@ src_compile() {
 		--enable-server \
 		--disable-valgrind-tests \
 		$(use_enable kerberos gssapi) \
+		$(use_with gcrypt libgcrypt) \
 		$(use_enable nls) \
+		$(use_with idn stringprep) \
 		$(use_enable static) \
 	|| die "econf failed"
 	emake || die "emake failed"
