@@ -2,4 +2,9 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 	<herd>net-mail</herd>
+<use>
+<flag name='gcrypt'>
+	Use <pkg>dev-libs/libgcrypt</pkg> for low-level crypto
+</flag>
+</use>
 </pkgmetadata>
